[package]
name = "minio"
version = "1.0.0"
authors = ["viri <git@stuff.moe>"]
edition = "2018"
documentation = "https://docs.rs/minio"
homepage = "https://github.com/notviri/minio"
repository = "https://github.com/notviri/minio"
readme = "README.md"
# keywords[]
# categories[]
license = "Unlicense"

[badges]
travis-ci = { repository = "notviri/minio" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
